tests/ui/typeck/while-loop-block-cond.stderr
error[E0308]: mismatched types
  --> $DIR/while-loop-block-cond.rs:2:11
   |
LL |     while {} {}
   |           ^^ expected `bool`, found `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
