tests/ui/typeck/while-loop-block-cond.rs
fn main() {
    while {} {}
    //~^ ERROR mismatched types [E0308]
}
